# assert-headers-python

./: CHANGELOG.md  README.md  example-com-configuration.json  example-com-configuration.yml  pyproject.toml  setup.py
AssertHeaders/: HeaderAssertionError.py  __init__.py  assertHeaders.py  assertHeadersFromUrl.py
assert-headers-py/: assertHeadersFromUrl.py  cli.py
src/assert_headers/: __about__.py  __init__.py  assert_headers.py  assert_headers_from_url.py  cli.py  get_meta.py
src/assert_headers/get_cli_configuration/: __init__.py  get_json_configuration.py  get_yaml_configuration.py
tests/: test_assertHeaders.py  test_assertHeadersFromUrl.py
