[tool.poetry]
name = "assert-headers-py"
version = "0.1.0"
description = "Assert HTTP headers."
authors = ["David Ragsdale <pkgsupport@davidjragsdale.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
